--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -20,6 +20,86 @@
 	<!-- Custom styles for this template -->
 	<link href="css/simple-sidebar.css" rel="stylesheet">
 
+	<script>
+		var umur = 0;
+		$(document).ready(function(){
+			var thisbmi = 0;
+			var umr = 0;
+			$("#table-kuisioner").hide();
+			$("#tinggi_badan,#berat_badan").change(function(){
+				gender = $("input[name='gender']:checked").val();
+
+				tb = $("#tinggi_badan").val();
+				bb = $("#berat_badan").val();
+				bmi = bb/((tb*tb)*0.01)*100;
+				//$("#bmi-result").html("BMI : "+bmi*100+" Kg/m2");
+				
+				if(gender == "L"){
+					if(bmi<17){
+						thisbmi = 1;
+					}else if(bmi >= 17 && bmi <= 23){
+						thisbmi = 0;
+					}else if(bmi > 23 && bmi <= 27){
+						thisbmi = 0;
+					}else{
+						return 1;
+					}
+				}else{
+					if(bmi<18){
+						thisbmi = 1;
+					}else if(bmi >= 18 && bmi <= 25){
+						thisbmi = 0;
+					}else if(bmi > 25 && bmi <= 27){
+						thisbmi = 0;
+					}else{
+						return 1;
+					}
+				}
+				$("#bmi-result").html("BMI : "+bmi+" Kg/m2");
+			});
+
+			$("#check").click(function(){
+				ttl = document.getElementById('ttl').value;
+				ttln = new Date(ttl);
+				now = new Date();
+
+				umur = now.getFullYear() - now.getFullYear();
+				umr = umur;
+				sa  = document.getElementById("up").value;
+				var xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function() {
+					if (this.readyState == 4 && this.status == 200) {
+						if(this.responseText == "NM"){
+							alert("is NM");
+							$("#table-kuisioner").hide();
+						}else if(this.responseText == "FC"){
+							alert(this.responseText);
+							$("#table-kuisioner").hide();
+						}else if(this.responseText == "A"){
+							alert(this.responseText);
+							$("#table-kuisioner").show();
+						}else if(this.responseText == "B"){
+							alert(this.responseText);
+							$("#table-kuisioner").show();
+						}else if(this.responseText == "D"){
+							alert(this.responseText);
+							$("#table-kuisioner").show();
+						}else if(this.responseText == "E"){
+							alert(this.responseText);
+							$("#table-kuisioner").show();
+						}else{
+							alert(this.responseText);
+							$("#table-kuisioner").show();
+						}
+					}
+				};
+				xhttp.open("GET", "predicts/"+umur+"/"+sa+"/"+thisbmi+"/", true);
+				xhttp.send();
+					
+			});
+		});
+	</script>
+
 <style>
 	body {
 	overflow-x: hidden;
@@ -146,7 +226,7 @@ body {
 	color: #858585;
 	text-transform: uppercase;
 	font-size: 9px;
-	width: 20%;
+	width: 25%;
 	margin-bottom: 30px;
 	float: left;
 	position: relative;
@@ -194,6 +274,17 @@ body {
 .progressBar li.active:before,  .progressBar li.active:after{
 	background: #46cc78;
 	color: white;
+}
+
+.check{
+	margin: 10px;
+	width: 85px;
+	height: 30px;
+	background-color: #46cc78;
+	border: none;
+	color: white;
+	outline: none;
+	cursor: pointer;
 }
 
 </style>
@@ -257,10 +348,9 @@ body {
 			<div class="form">
 				<ul class='progressBar'>
 					<li class='active'>Data Diri</li>
-					<li>Social media</li>
-					<li>Personal details</li>
-					<li>Personal </li>
-					<li>Personal </li>
+					<li>Data Antropometri</li>
+					<li>pengajuan UP</li>
+					<li>Hasil</li>
 				</ul>
 				<!-- fieldsets -->
 				<fieldset>
@@ -268,31 +358,89 @@ body {
 						<div class="row">
 							<div class="col">
 								<input type="text" name="nama" placeholder="Nama" required/>
-								<input type="date" name="tanggal_lahir" placeholder="Tanggal Lahir" required/>
+								<input type="date" name="tanggal_lahir" placeholder="Tanggal Lahir" id="ttl" required/>
 								<input type="text" name="alamat" placeholder="Alamat" required/>
+								<input type="text" name="agama" placeholder="Agama" required/>
+								<input type="text" name="suku" placeholder="Suku" required/>
+								
+								<div style="margin-top: 10px">
+									<div style="display: inline-flex">
+										<label>Laki-Laki</label>
+										<input id="L" class="gender" style="width: 30px;margin-top: 5px;margin-right: 20px" type="radio" name="gender" placeholder="Laki-laki" value="L">
+										<label>Perempuan</label>
+										<input id="P" class="gender" style="width: 30px;margin-top: 5px;margin-right: 20px" type="radio" name="gender" placeholder="Perempuan" value="P">
+									</div>
+								</div>
+	
+							</div>
+							<div class="col">
+
 							</div>
 						</div>
-						
 						<input type="button" name="next" class="next action-button" value="Next" />
 				</fieldset>
 				<fieldset>
-						<h2 class="fs-title">Social Profiles</h2>
-						<input type="text" name="twitter" placeholder="Twitter" />
-						<input type="text" name="facebook" placeholder="Facebook" />
-						<input type="text" name="gplus" placeholder="Google Plus" />
+						<h2 class="fs-title">Data Antropometri</h2>
+						<div class="row">
+							<div class="col">
+								<input type="number" id="tinggi_badan" name="tinggi_badan" placeholder="Tinggi Badan (cm)" required/>
+								<input type="number" id="berat_badan" name="berat_badan" placeholder="Berat Badan (cm)" required/>
+								<div id="result-bmi" style="margin-top: 10px">
+									<div id="bmi-result" class="" role="alert" style="padding: 3px">
+										Success BMI result
+									</div>
+								</div>
+							</div>
+							<div class="col">
+								
+							</div>
+						</div>
 						<input type="button" name="previous" class="previous action-button" value="Previous" />
-						<input type="button" name="next" class="next action-button" value="Next" />
+						<input type="button" name="next" class="next action-button disable " value="Next" />
 				</fieldset>
 				<fieldset>
-					<h2 class="fs-title">Social</h2>
-					<input type="text" name="twitter" placeholder="Twitter" />
-					<input type="text" name="facebook" placeholder="Facebook" />
-					<input type="text" name="gplus" placeholder="Google Plus" />
+					<h2 class="fs-title">pengajuan UP</h2>
+					<div class="row">
+						<input type="text" name="SA" id="up" placeholder="Uang Pertanggungan" /><button id="check" class=" check" style="margin-top: 10px">Check</button>
+					</div>
+					<div id="form-riwayat-penyakit" style="margin-top: 10px">
+						<table id="table-kuisioner" class="table" >
+							<thead>
+								<tr>
+									<th>
+										No
+									</th>
+									<th>
+										Pertanyaan
+									</th>
+									<th>
+										Respon
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Apakah anda merokok ?</td>
+									<td>
+										<div style="display: inline-flex">
+												<label for="perokok-ya">Ya</label>
+												<input id="perokok-ya" style="width: 30px;margin-top: 5px;margin-right: 20px" type="radio" class="action-dll">
+												<label for="perokok-tidak">Tidak</label>
+												<input id="perokok-tidak" style="width: 30px;margin-top: 5px" type="radio" class="action-dll">
+										</div>
+										
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div id="field"></div>
 					<input type="button" name="previous" class="previous action-button" value="Previous" />
 					<input type="button" name="next" class="next action-button" value="Next" />
 			</fieldset>
 				<fieldset>
-					<h2 class="fs-title">Personal Details</h2>
+					<h2 class="fs-title">Hasil</h2>
 					<input type="text" name="fname" placeholder="First Name" />
 					<input type="text" name="lname" placeholder="Last Name" />
 					<input type="text" name="phone" placeholder="Phone" />
@@ -303,21 +451,18 @@ body {
 			</div>
 		</div>
 		
+		<!--
 		<input id="umur" type='number' placeholder="umur"></input>
 		<input id="SA" type='number' placeholder="SA"></input>
 		<button onclick="loadDoc()">click</button>
+		-->
 		
-		<div id="field"></div>
 		
 		<!--<form method="POST" >{% csrf_token %}
 			<input type='text' name='nm' placeholder="nm">
 			<input type='text' name='nm1' placeholder="nm1">
 			<input type="submit" value="submit" placeholder="submit">
 		</form>-->
-
-	<button id="click" onclick="loadDoc()">
-		click
-	</button>
 
 	<script src="vendor/jquery/jquery.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -362,7 +507,7 @@ body {
 				document.getElementById("field").innerHTML = this.responseText;
 				}
 			};
-			xhttp.open("GET", "predicts/"+umur+"/"+sa, true);
+			xhttp.open("GET", "predicts/"+umur+"/"+sa+"/1/", true);
 			xhttp.send();
 		}
 		
